# recast-atlas

./: .buildinfo  .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  api.html  genindex.html  index.html  lxplus_reqs.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  deploy.yml  docker.yml  docs.yml  head-of-dependencies.yml  lint.yml  publish-package.yml
_generated/: recastatlas.backends.docker.html  recastatlas.backends.html  recastatlas.backends.kubernetes.html  recastatlas.backends.local.html  recastatlas.backends.reana.html  recastatlas.data.html  recastatlas.subcommands.auth.html  recastatlas.subcommands.backends.html  recastatlas.subcommands.catalogue.html  recastatlas.subcommands.ci.html  recastatlas.subcommands.run.html  recastatlas.subcommands.software.html  recastatlas.subcommands.testing.html
_sources/: api.rst.txt
_sources/_generated/: recastatlas.backends.docker.rst.txt  recastatlas.backends.kubernetes.rst.txt  recastatlas.backends.local.rst.txt  recastatlas.backends.reana.rst.txt  recastatlas.backends.rst.txt  recastatlas.data.rst.txt  recastatlas.subcommands.auth.rst.txt  recastatlas.subcommands.backends.rst.txt  recastatlas.subcommands.catalogue.rst.txt  recastatlas.subcommands.ci.rst.txt  recastatlas.subcommands.run.rst.txt  recastatlas.subcommands.software.rst.txt  recastatlas.subcommands.testing.rst.txt
_static/: copybutton.js  documentation_options.js
deploy/: deploy.sh  deploy_lxplus8.sh  deploy_lxplus9.sh  recast-atlas-0.1.8-requirements.txt  recast-atlas-0.1.9-requirements.txt  recast-atlas-0.3.0-requirements.txt
docker/: Dockerfile
docs/: api.rst  conf.py  index.rst  launch_recast.sh  maintainer-notes.md
recastatlas/: cli.py  config.py  resultsextraction.py  testing.py
recastatlas/backends/: __init__.py
recastatlas/data/: config.yml
recastatlas/data/catalogue/: atlas_atlas_conf_2018_041.yml  busyboxtest.yml  examples_checkmate1.yml  examples_checkmate2.yml
recastatlas/data/templates/helloworld/: recast.yml
recastatlas/data/templates/helloworld/specs/: workflow.yml
recastatlas/subcommands/: auth.py  backends.py  catalogue.py  ci.py  run.py  software.py  testing.py
src/: cli.py  config.py  lxplus_reqs.txt
src/data/catalogue/: busyboxtest.yml
src/data/templates/helloworld/: recast.yml
src/recastatlas/: cli.py  config.py  exceptions.py  resultsextraction.py  testing.py
src/recastatlas/backends/: __init__.py  docker.py  kubernetes.py  local.py  reana.py
src/recastatlas/data/: expect_script.sh  getkrb_reana.sh
src/recastatlas/data/catalogue/: atlas_atlas_conf_2018_041.yml  busyboxtest.yml  examples_checkmate1.yml  examples_checkmate2.yml  examples_rome.yml
src/recastatlas/data/templates/helloworld/: recast.yml
src/recastatlas/data/templates/helloworld/specs/: steps.yml  workflow.yml
src/recastatlas/subcommands/: auth.py  backends.py  catalogue.py  ci.py  run.py  software.py  testing.py
src/subcommands/: software.py  testing.py
tests/: test_cli.py
