[metadata]
name = recast-atlas
version = 0.1.7
description = RECAST for ATLAS at the LHC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/recast-hep/recast-atlas
author = Lukas Heinrich
author_email = lukas.heinrich@cern.ch
license = Apache
license_file = LICENSE
keywords = physics recast atlas
project_urls =
    Documentation = https://github.com/recast-hep/recast-atlas
    Source Code = https://github.com/recast-hep/recast-atlas
    Issue Tracker = https://github.com/recast-hep/recast-atlas/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
# TODO: Empirically evaluate lower bounds
install_requires =
    click>=7.0  # for console scripts
    jsonschema>=3.0.0
    pyyaml>=5.1  # for parsing CLI options
    yadage-schemas==0.10.6  # lock to yadage

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    recast = recastatlas.cli:recastatlas
